<resources>
    <string name="app_name">Uber Food</string>
    <string name="first_screen_search_text">Start by typing your address or simply let APPNAME automatically detect your location.</string>
    <string name="hint_search_text">Enter your suburb or postcode</string>
    <string name="first_screen_button">let\'s  start</string>
    <string name="text_signin">Already have an account? Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Sign in</string>
    <string name="sign_up_text">Not a Member yet ? join us now </string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_first_name">First name </string>
    <string name="hint_last_name">Last name </string>
    <string name="text_sign_up">Sign up</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_location">Location</string>
    <string name="hint_postal_code">Postal code</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="verify_info_login">Please fill out all required fields</string>
    <string name="verify_form_email">Invalid email address</string>
    <string name="verify_phone_number">Invalid phone number</string>
    <string name="verify_postal_code">Invalid postal code</string>
    <string name="verify_length_password">invalid password</string>
    <string name="verify_internet">Please verify your internet connexion</string>
    <string name="verify_confirmed_password">Not confirmed password</string>
    <string name="existing_email">Your email already exists in the database</string>
    <string name="existing_phone_number">Your phone number already exists in the database </string>
    <string name="no_email">Please fill out  your email address</string>
    <string name="no_password">Please fill out your password</string>
    <string name="hint_search_text_from_search_activity">Search ...</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>


    <string-array name="switch_tabs">
        <item>Delivery</item>
        <item>Pick-up</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_alert_dialog">Refine your Search</string>
    <string name="technical_error">Technical Error , please try again !</string>
    <string name="login_error_message">Couldn\'t login, please verify your email or password !</string>
    <string name="Your_order">Your Order</string>
    <string name="edit">Edit</string>
    <string name="for_delivery">For delivery</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="filter_tooltip_text">Filter restaurants</string>
    <string name="logout">Logout</string>
    <string name="menu_profil_item_one">Add Feedback</string>
    <string name="menu_profil_item_two">Help Center</string>
    <string name="menu_profil_item_three">Settings</string>
    <string name="open_hour">Open Hour</string>
    <string name="sun">Sun</string>
    <string name="schedule">Takeaway Schedule</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="location">Location</string>
    <string name="gallery">Gallery</string>
    <string name="feedback">Send Feedback</string>
    <string name="subtotal">Subtotal</string>
    <string name="price">0.0 DT</string>
    <string name="tax_amount">Tax amount</string>
    <string name="pourcentage">2.0 %</string>
    <string name="delivery_free">Delivery free</string>
    <string name="delivery_price">6.0 DT</string>
    <string name="total">Total</string>
    <string name="city_location_search">Search your city</string>
    <string name="hint_search_city">Grand Tunis</string>
    <string name="city_quarter_search">Search your quarter</string>
    <string name="hint_quarter_city">Marsa</string>
    <string name="my_current_location">Use my current location</string>
    <string name="search_restarants">Search Restaurants</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="no_internet_connexion">Unable to reach the internet</string>
    <string name="no_internet_connexion_text">Check your internet connexion and try again !</string>
    <string name="no_results_found">Oups !</string>
    <string name="no_results_found_text">It seems your plate is going to be empty try looking for restaurants in other location.</string>

    <string name="undo">Undo</string>
    <string name="send_order_message">Successful order</string>
    <string name="text_splash_screen">By start development</string>
    <string name="see_more">More</string>
    <string name="no_orders">You have no orders yet !</string>
    <string name="no_panel">You didn\'t add any menu to your panel !</string>
    <string name="active_gps">Active GPS , Please !</string>
    <string name="uber_food">Uber Food</string>
    <string name="text_first_screen">A small paragraph that contains a content that descripe an objective or an app goes here! Can be two lines long or preferably three lines long.</string>
    <string name="sign_in_facebook">signin using your facebook account</string>
    <string name="or">OR</string>
    <string name="infos_sign_in">use your username , email or phone number</string>
    <string name="username_or_mail">username / email or phone number</string>
    <string name="facebook_app_id">[644908225950663]</string>
    <string name="fb_login_protocol_scheme">fb[644908225950663]</string>
    <string name="login">IT SEEMS YOU\'RE NOT LOGGED IN</string>
    <string name="use_x_to_join_use">use your phone number to join us</string>
    <string name="username">name</string>
    <string name="hint_username">Name</string>
    <string name="mail">e-mail</string>
    <string name="sign_up">Already a member ? sign in now</string>


</resources>
