<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    tools:context=".fragments.DeliveryFragment">
   <ProgressBar
       android:layout_gravity="center"
       android:visibility="gone"
       android:indeterminateTintMode="src_in"
       android:indeterminateTint="@color/colorOrange"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/progressBarDeliveryFragment"
       android:layout_centerInParent="true"/>

   <LinearLayout
       android:visibility="gone"
       android:id="@+id/ll_no_internet_connexion"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <ImageView
          android:src="@drawable/no_iternet_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <android.support.v7.widget.AppCompatTextView
          android:textSize="14sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/no_internet_connexion"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      <android.support.v7.widget.AppCompatTextView
          android:textColor="@android:color/white"
          android:textSize="12sp"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/no_internet_connexion_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
   </LinearLayout>
   <LinearLayout
       android:visibility="gone"
       android:id="@+id/ll_no_results_found"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <ImageView
          android:src="@drawable/not_found_image"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <android.support.v7.widget.AppCompatTextView
         android:layout_marginTop="40dp"
          android:layout_marginRight="40dp"
          android:layout_marginLeft="40dp"
          android:textSize="18sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/no_results_found"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      <android.support.v7.widget.AppCompatTextView
          android:layout_marginLeft="40dp"
          android:layout_marginRight="40dp"
          android:textColor="@android:color/white"
          android:textSize="16sp"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/no_results_found_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
   </LinearLayout>


   <android.support.v4.view.ViewPager
       android:layout_marginTop="30dp"
       android:layout_marginBottom="10dp"
     android:layout_gravity="center"
       android:clipToPadding="false"
       android:overScrollMode="never"
       android:id="@+id/viewPager"
       android:foregroundGravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
</FrameLayout>