<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <LinearLayout
          android:id="@+id/return_icon_order_activity"
          android:layout_margin="10dp"
          android:background="@drawable/background_menu_icon"
          android:gravity="center"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          <ImageView
              android:scaleType="centerCrop"
              android:layout_gravity="center"
              android:id="@+id/arrow_back_from_menu_activity"
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:layout_margin="5dp"
              android:src="@drawable/arrow_back" />
      </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:background="@drawable/background_order_activity"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:textColor="@color/colorDarkGrey"
                    android:text="@string/Your_order"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatTextView
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:textColor="@color/gray_3"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:layout_weight="2"
                    android:text="@string/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <android.support.v7.widget.AppCompatTextView
                android:textColor="@color/gray_3"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:layout_weight="2"
                android:text="@string/for_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/activity_order_cancel"
                android:layout_marginLeft="10dp"
                android:padding="4dp"
                android:background="@drawable/background_cancel_button"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:textSize="14sp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorBlack"
                    android:padding="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/activity_order_ok"
                android:padding="4dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/background_orange_button"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/ok"
                    android:textColor="@color/colorWhite"
                    android:padding="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>