<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorOrange"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">


    <LinearLayout
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrow_back_from_signup"
            android:layout_margin="10dp"
            android:src="@drawable/arrow_back"
            android:layout_width="60dp"
            android:layout_height="30dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_sign_up"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_username_sign_up"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="textEmailAddress"
                android:id="@+id/et_email_sign_up"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="textPassword"
                android:id="@+id/et_password_sign_up"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="textPassword"
                android:id="@+id/et_confirm_password_sign_up"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_local_phone_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="phone"
                android:id="@+id/et_phone_number"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="text"
                android:id="@+id/et_location"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_edittext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:inputType="text"
                android:id="@+id/et_postal_code"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:gravity="center"
       android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/button_signup"
        android:background="@drawable/background_white_button"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="150dp"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/text_sign_up"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </LinearLayout>


</RelativeLayout>